fix: fix inability to click header logo on tablet and desktop

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -8,6 +8,10 @@
   right: 50%;
   transform: translateX(50%);
   width: 185px;
+
+  @media (min-width: @tablet) {
+    z-index: 1;
+  }
 }
 
 .header__logo {
